--- a/ahc.yaml
+++ b/ahc.yaml
@@ -5,7 +5,7 @@
 # If you are using latest version of adhoccomputing library then probably it wont be problem. However, since we are 
 # currently developing our system every day, there might be problems as a result, installing the latest version of
 # adhoccomputing library is always guarantee for simulation. 
-image: cengwins/ahc-uhd-image
+image: cengwins/ahc-uhd-image:latest
 command: pip install adhoccomputing==2.1.2 --no-cache-dir && python3 PhysicalLayers/testUsrp.py
 
 env:
