--- a/ahc.yaml
+++ b/ahc.yaml
@@ -6,7 +6,7 @@
 # currently developing our system every day, there might be problems as a result, installing the latest version of
 # adhoccomputing library is always guarantee for simulation. 
 image: cengwins/ahc-uhd-image
-command: pip install adhoccomputing==2.1.4 --no-cache-dir && git pull && python3 PhysicalLayers/testBladeRF.py && python3 testUsrp.py
+command: pip install adhoccomputing==2.1.4 --no-cache-dir && git pull && python3 PhysicalLayers/testBladeRF.py && python3 PhysicalLayers/testUsrp.py
 
 env:
   PYTHONUNBUFFERED: "1"
